--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img class="js-challenge" src="assets/img/js-challenge-logo.png" alt="">
                 <img class="platzi" src="assets/img/platzi.webp" alt="">
             </div>
-            <a class="user" href="https://www.linkedin.com/in/lucasfrezzini/" target="_blank">@lucasfrezzini</a>
+            <a class="user" href="https://www.linkedin.com/in/enrique-miguel-chalco-vila-5773791a3/" target="_blank">@enriquechv3</a>
         </nav>
     </header>
     <main>
@@ -48,6 +48,7 @@
                 <li>Curso de Frontend - @teffcode</li>
                 <li>Curso Básico de JavaScript - @degranda10</li>
                 <li>Curso Práctico de JavaScript - @juandc</li>
+                <li>Fuente: Lucas Frezzini</li>
             </ul>
             <p><strong> Utilizá los talleres para hacer tus calculos</strong></p>
         </section>
